# pokedex_miyoo

./: .gitattributes  .gitignore  Jenkinsfile  README.md
.github/ISSUE_TEMPLATE/: bug-or-feature.md  bug_feature.md
.github/workflows/: place_holder.yml
App/Pokedex/: DownloadSprites  Pokedex  Pokedex_backup  config.json
App/Pokedex/script/: dev.sh  launch.sh
App/Retrodex/: config.json
App/Retrodex/lib/: ld-linux-armhf.so.3  libSDL2_mixer-2.0.so.0  libmgba.so.0.11
App/Retrodex/res/font/pokemon-advanced-battle/: license.txt
App/Retrodex/script/: dev.sh  launch.sh
Source/union-miyoomini-toolchain/: Dockerfile  Makefile
Source/union-miyoomini-toolchain/support/: setup-env.sh
Source/union-miyoomini-toolchain/target_os_config/union-toolchain/: CMakeLists.txt  Toolchain.cmake
Source/union-miyoomini-toolchain/target_os_config/windows/: CMakeLists.txt  Dockerfile  Toolchain.cmake  mksdl2.sh
Source/union-miyoomini-toolchain/target_os_config/windows/support/: setup-env.sh
Source/union-miyoomini-toolchain/workspace/: mksdl2 _pipeline.sh  mksdl2.sh  mksdl2_pipeline.sh
Source/union-miyoomini-toolchain/workspace/curl-7.64.0/: Makefile  config.status  curl-config  libcurl.pc  libtool
Source/union-miyoomini-toolchain/workspace/curl-7.64.0/docs/: Makefile
Source/union-miyoomini-toolchain/workspace/curl-7.64.0/include/: Makefile
Source/union-miyoomini-toolchain/workspace/curl-7.64.0/lib/: curl_config.h  libcurl.la  libcurl_la-amigaos.lo  libcurl_la-asyn-ares.lo  libcurl_la-asyn-thread.lo  libcurl_la-base64.lo  libcurl_la-conncache.lo  libcurl_la-connect.lo  libcurl_la-content_encoding.lo  libcurl_la-cookie.lo  libcurl_la-curl_addrinfo.lo  libcurl_la-curl_ctype.lo  libcurl_la-curl_des.lo  libcurl_la-curl_endian.lo  libcurl_la-curl_fnmatch.lo  libcurl_la-curl_gethostname.lo  libcurl_la-curl_gssapi.lo  libcurl_la-curl_memrchr.lo  libcurl_la-curl_multibyte.lo  libcurl_la-curl_ntlm_core.lo  libcurl_la-curl_ntlm_wb.lo  (+92 more)
Source/union-miyoomini-toolchain/workspace/pokedex/: CMakeLists.txt  DownloadAnimatedSprites  DownloadIcons  Toolchain.cmake  gifs_downloader.cpp  icons_downloader.cpp  pokedex-copy.cpp  pokedex-copy1.cpp  pokedex.cpp  sprites_downloader.cpp
Source/union-miyoomini-toolchain/workspace/retrodex/: CMakeLists.txt  PokeSurface.cc  PokeSurface.h  Pokedex.cc  Pokedex.h  PokedexActivity.cpp  PokedexActivity.h  PokedexActivityEvent.cc  PokedexActivityEvent.h  PokedexActivityIntro.cpp  PokedexActivityIntro.h  PokedexActivityList.cc  PokedexActivityList.h  PokedexActivityManager.cpp  PokedexActivityManager.h  PokedexActivityMenu.cc  PokedexActivityMenu.h  PokedexActivitySetting.cpp  PokedexActivitySetting.h  PokedexActivity_PokemonView_Evolution.cpp  PokedexActivity_PokemonView_Evolution.h  PokedexActivity_PokemonView_Info.cpp  PokedexActivity_PokemonView_Info.h  PokedexActivity_PokemonView_Location.cpp  PokedexActivity_PokemonView_Location.h  PokedexActivity_PokemonView_Moves.cpp  PokedexActivity_PokemonView_Moves.h  PokedexActivity_PokemonView_Stats.cpp  PokedexActivity_PokemonView_Stats.h  PokedexDB.cpp  PokedexDB.h  Pokemon.cpp  Pokemon.h  SQLstatements.cpp  SQLstatements.h  Toolchain.cmake
Source/union-miyoomini-toolchain/workspace/retrodex/core/: PokeSurface.cc  PokedexActivityEvent.cc  PokedexActivityIntro.cc  PokedexActivityList.cc  PokedexActivityManager.cc  PokedexActivityMenu.cc  PokedexActivitySetting.cc  PokedexActivity_PokemonView_Evolution.cc  PokedexActivity_PokemonView_Info.cc  PokedexActivity_PokemonView_Location.cc  PokedexActivity_PokemonView_Moves.cc  PokedexActivity_PokemonView_Stats.cc  Pokemon.cc
Source/union-miyoomini-toolchain/workspace/retrodex/core/include/: PokeSurface.h  Pokedex.h  PokedexActivityEvent.h  PokedexActivityList.h  PokedexActivityManager.h  PokedexActivityMenu.h  PokedexActivitySetting.h  PokedexActivity_PokemonView_Info.h  PokedexActivity_PokemonView_Location.h  PokedexActivity_PokemonView_Stats.h
Source/union-miyoomini-toolchain/workspace/retrodex/include/: PokedexActivity_PokemonView_Location.h  PokedexDB.h
Source/union-miyoomini-toolchain/workspace/retrodex/sqlite/: shell.c  sqlite3ext.h
Source/union-miyoomini-toolchain/workspace/retrodex/targets/local/: CMakeLists.txt  Makefile
Source/union-miyoomini-toolchain/workspace/retrodex/targets/miyoo/: CMakeLists.txt  Makefile  Toolchain.cmake
Source/union-miyoomini-toolchain/workspace/retrodex/unittest/: pch.h
Source/window_dev/: PokeSurface.h  Pokedex.cc  PokedexActivityEvent.cc  PokedexActivityEvent.h  PokedexActivityList.cc  PokedexActivity_PokemonView_Evolution.cpp  PokedexActivity_PokemonView_Moves.cpp  Pokemon.h  SQLstatements.cpp
Source/window_dev/unittest/: test.cpp
Source/windows-visual-studio/Pokedex/: Pokedex.cpp  Pokedex.sln  Pokedex.vcxproj  Pokedex.vcxproj.filters  Source.cpp  gifs_downloader.cpp  icons_downloader.cpp  image_downloader.cpp  pokedexStats.sqlite  sprites_downloader.cpp
refactoring/Pokemon/: ColorMap.h  Mappings.cc  Mappings.h  PokeActivityIntro.cpp  PokeActivityIntro.h  PokeSurface.cc  PokeSurface.h  Pokedex.cc  Pokedex.cpp  Pokedex.h  PokedexActivity.h  PokedexActivityEvent.cc  PokedexActivityEvent.h  PokedexActivityIntro.cpp  PokedexActivityIntro.h  PokedexActivityList.cc  PokedexActivityList.h  PokedexActivityManager.cpp  PokedexActivityManager.h  PokedexActivityMenu.cc  PokedexActivityMenu.h  PokedexActivityPokemonView_Info.cpp  PokedexActivityPokemonView_Info.h  PokedexActivitySetting.cpp  PokedexActivitySetting.h  PokedexActivity_PokemonView_Evolution.cpp  PokedexActivity_PokemonView_Evolution.h  PokedexActivity_PokemonView_Info.cpp  PokedexActivity_PokemonView_Info.h  PokedexActivity_PokemonView_Location.cpp  PokedexActivity_PokemonView_Location.h  PokedexActivity_PokemonView_Moves.cpp  PokedexActivity_PokemonView_Moves.h  PokedexActivity_PokemonView_Stats.cpp  PokedexActivity_PokemonView_Stats.h  PokedexActivity_Settings.cpp  PokedexActivity_Settings.h  PokedexDB.cpp  PokedexDB.h  Pokemon.cpp  (+5 more)
refactoring/Pokemon/unittest/: pch.h  test.cpp
refactoring/Pokemon/unittest/reports/: pokemon_test_report.xml
(+233 files in other folders)
